tests/invalid/circ1.fl
c2 :: import "circ2.fl";

MyType :: i32;

hey :: proc () {
  b: c2.OtherType;
}
